# uuv_simulator_beex

./: README.md
.github/workflows/: create_issue_branch.yml
uuv_assistants/: CMakeLists.txt
uuv_assistants/scripts/: create_new_robot_model  create_thruster_manager_configuration  publish_world_models.py
uuv_gazebo_plugins/asv_wave_sim_gazebo_plugins/: CMakeLists.txt  package.xml
uuv_gazebo_plugins/asv_wave_sim_gazebo_plugins/src/: HydrodynamicsMsgPublisher.cc  HydrodynamicsMsgSubscriber.cc  HydrodynamicsPlugin.cc  Physics.cc  Physics_TEST.cc  Wavefield.cc
uuv_gazebo_plugins/uuv_gazebo_plugins/: CMakeLists.txt  package.xml
uuv_gazebo_plugins/uuv_gazebo_plugins/src/: HydrodynamicModel.cc  ThrusterPlugin.cc  UnderwaterObjectPlugin.cc
uuv_gazebo_plugins/uuv_gazebo_ros_plugins/: CMakeLists.txt
uuv_gazebo_plugins/wave_gazebo_plugins/: CMakeLists.txt  package.xml
uuv_gazebo_plugins/wave_gazebo_plugins/include/: PhysicalConstants.hh  Utilities.hh  wavegauge_plugin.hh
uuv_gazebo_plugins/wave_gazebo_plugins/include/wave_gazebo_plugins/: Geometry.hh  Physics.hh  Wavefield.hh  WavefieldEntity.hh  WavefieldModelPlugin.hh  WavefieldVisualPlugin.hh
uuv_gazebo_plugins/wave_gazebo_plugins/src/: Gazebo.cc  Geometry.cc  PhysicalConstants.cc  Physics.cc  Utilities.cc  Wavefield.cc  WavefieldEntity.cc  WavefieldModelPlugin.cc  WavefieldVisualPlugin.cc  Wavefield_TEST.cc  wavegauge_plugin.cc
uuv_gazebo_plugins/wave_gazebo_plugins/srv/: SetWaveHeight.srv
uuv_sensor_plugins/uuv_sensor_ros_plugins/: CMakeLists.txt
uuv_world_plugins/uuv_world_plugins/: CMakeLists.txt
(+11 files in other folders)
