<?xml version="1.0"?>
<package format="2">
  <name>wave_gazebo_plugins</name>
  <version>1.3.0</version>
  <description>
    This package contains Gazebo plugins for the simulation of 
    water surface waves and hydrostatic and hydrodynamics forces. 
  </description>

  <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>

  <license>TBD</license>

  <author email="rhys.mainwaring@me.com">Rhys Mainwaring</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <build_depend>eigen</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>
</package>
